--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 The Irish people already know that Israel is continuing to commit war crimes and genocide against the Palestinian people.
 
-On Wednesday 22th November, you will vote on a resolution to:
+On Wednesday 22nd November, you will vote on a resolution to:
 
 - Assess whether Israel is, or is at serious risk of committing genocide, in line with this State’s legal obligation to prevent genocide under the Genocide Convention, by employing all means reasonably available.
 
@@ -176,7 +176,7 @@ Sincerely,
         <p class="normal0" style="line-height:100%; font-size:12pt;"><span style="font-family:Calibri;">&nbsp;</span></p>
         <p class="normal0" style="line-height:115%; font-size:12pt;"><strong><span style="font-family:Calibri;">The Irish people already know that Israel is continuing to commit war crimes and genocide against the Palestinian people.</span></strong></p>
         <p class="normal0" style="line-height:90%; font-size:12pt;"><span style="font-family:Calibri;">&nbsp;</span></p>
-        <p class="normal0" style="line-height:115%; font-size:12pt;"><span style="font-family:Calibri;">On Wednesday 22th November,&nbsp;</span><em><span style="font-family:Calibri;">you</span></em><span style="font-family:Calibri;">&nbsp;will vote on a resolution to:</span></p>
+        <p class="normal0" style="line-height:115%; font-size:12pt;"><span style="font-family:Calibri;">On Wednesday 22nd November,&nbsp;</span><em><span style="font-family:Calibri;">you</span></em><span style="font-family:Calibri;">&nbsp;will vote on a resolution to:</span></p>
         <p class="normal0" style="line-height:90%; font-size:12pt;"><span style="font-family:Calibri;">&nbsp;</span></p>
 
         <p class="normal0" style="line-height:115%; font-size:12pt;"><span style="font-family:Calibri;">-&nbsp;</span><strong><span style="font-family:Calibri;">Assess whether Israel is</span></strong><span style="font-family:Calibri;">, or is at serious risk of&nbsp;</span><strong><span style="font-family:Calibri;">committing genocide</span></strong><span style="font-family:Calibri;">, in line with this State&rsquo;s legal obligation to prevent genocide under the Genocide Convention, by employing all means reasonably available.</span></p>
